--- a/src/styles/main_styles.css
+++ b/src/styles/main_styles.css
@@ -1,236 +1,238 @@
-.section1 {
-    width: 100vw;
-    min-width: 100%;
-    height: 1080px;
-    position: relative;
-    /*top: 0;
-    z-index:-9;
-    */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-
-    background-color: red;
+.main_container {
+  height: calc(550px * 3);
+  background-image: "../../public/images/";
 }
 
-.section2{
-    width: 10vw;
-    min-width: 100%;
-    height: 550px;
-    position: relative;
-    /*
-    top:calc(550px * 1)
-    z-index:99;
-    */
+.section1 {
+  width: 100vw;
+  max-width: 100%;
+  height: 1080px;
+  /* position: relative; */
+  position: fixed;
+  top: 0;
+  z-index: -9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+
+  background-color: red;
+}
+
+.section2 {
+  width: 100vw;
+  max-width: 100%;
+  height: 550px;
+  /* position: relative; */
+  position: fixed;
+  top: calc(550px * 1);
+  z-index: 99;
+  opacity: 0.6;
+  background-color: orange;
 }
 
 .section3 {
-    width: 100vw;
-    min-width: 100%;
-    height: 550px;
-    position: relative;
-    /* top:calc(550px * 2); */
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
+  width: 100vw;
+  max-width: 100%;
+  height: 600px;
+  /* position: relative; */
+  position: fixed;
+  opacity: 0.9;
+  top: calc(600px * 2);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  text-align: center;
 
-    font-size: 30px;
+  font-size: 30px;
 
-    background-color: #676b89;
+  background-color: #676b89;
 }
 
+/* ******** Section 1 Children ********* */
+.greeting {
+  /* position: absolute; */
+  position: fixed;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 99;
 
-/* *****************section 1 children *********** */
-.greeting{
-    position: absolute;
-    /* position: fixed */
-    top: 35%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 99;
+  font-size: 130px;
 
-    font-size: 130px;
-    color:white;
+  color: white;
 }
-
 
 .space {
-    /* position: fixed */
-    position: absolute;
-    top:0;
+  position: fixed;
+  /* position: absolute; */
+  top: 0;
 }
-.planet1 {
-    width: 18%;
-    height: auto;
-    /* position: fixed */
-    position: absolute;
-    top: 15%;
-    left: 10%;
+
+.planet {
+  width: 18%;
+  height: auto;
+  position: fixed;
+  /* position: absolute; */
+  top: 15%;
+  left: 10%;
 }
 
 .earth {
-    width: 40%;
-    min-width: 325px;
-    height: auto;
-    /* position fixed */
-    position: absolute;
-    top: -10%;
-    left: 80%;
+  width: 40%;
+  max-width: 325px;
+  height: auto;
+  position: fixed;
+  /* position: absolute; */
+  top: -10%;
+  left: 80%;
 }
 
-.rocket{
-    width: 25%;
-    min-width: 250px;
-    height: auto;
-    /* position fixed; */
-    position: absolute;
-    top: 40%;
-    right: 10%;
+.rocket {
+  width: 25%;
+  max-width: 250px;
+  height: auto;
+  position: fixed;
+  /* position: absolute; */
+  top: 40%;
+  right: 90%;
 }
 
-.satellite{
-width: 10%;
-height: auto;
-/* position: fixed; */
-position: absolute;
-top: 5%;
-left: 68%;
+.satellite {
+  width: 10%;
+  height: auto;
+  position: fixed;
+  /* position: absolute; */
+  top: 5%;
+  left: 68%;
 }
 
-/* *****************section 2 children *********** */
+/* ******** Section 2 Children ********* */
+.svg_curve_top {
+  width: 100%;
+  height: 5vw;
+  position: absolute;
+  transform: translateY(-99%);
+}
 
-.svg_curve_top{
+.svg_curve_bottom {
+  width: 100%;
+  height: 5vw;
+  position: absolute;
+}
+
+.section2_container {
+  padding: 30px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.left_side {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.right_side {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image {
+  width: 70%;
+  height: auto;
+  border-radius: 50%;
+  box-shadow: 0 0 10px 5px black;
+}
+
+/* ******** Section 3 Children ********* */
+.input_email {
+  margin: 10px 0;
+  padding: 10px;
+  width: 60%;
+  height: 50px;
+  border: 1px solid black;
+  border-radius: 3px;
+
+  font-size: 25px;
+
+  outline: none;
+}
+
+.contacts {
+  margin-top: 110px;
+  width: 100%;
+  height: 30%;
+  display: flex;
+  justify-content: flex-start;
+
+  color: white;
+  background-color: #303443;
+  box-shadow: 0 0 5px 0 #303443;
+}
+
+.contact_section {
+  margin: 0 15px;
+  width: 200px;
+  height: 100%;
+
+  font-size: 22px;
+}
+
+@media only screen and (max-width: 501px) {
+  /* ************* Section 1 children *************** */
+  .greeting {
+    font-size: 60px;
+  }
+
+  .earth {
+    max-width: 70%;
+    top: 5%;
+    left: 70%;
+  }
+
+  .rocket {
+    max-width: 40%;
+  }
+
+  .satellite {
+    width: 20%;
+  }
+
+  /* ************* Section 2 children *************** */
+  .section2_container {
+    flex-direction: column;
+  }
+
+  .left_side {
     width: 100%;
-    height: 5vw;
-    position: absolute;
-    transform: translateY(-100%);
-}
+    height: 50%;
+  }
 
-.svg_curve_bottom{
+  .right_side {
     width: 100%;
-    height: 5vw;
-    position: absolute;
-}
+    height: 50%;
+  }
 
-.section2_container{
-    padding: 30px;
-    width: 100%;
+  .image {
+    width: auto;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: orange;
-}
-.left_side{
-    /* background-color: rgb(255, 255, 255);  */
-    width: 50%;
-    height: 100%;
-    color:white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
-}
-.right_side{
-     /* background-color: purple;  */
-     
-   
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-.image{
-    width: 70%;
-    height: auto;
-    border-radius: 50%;
-    box-shadow: 0 0 10px 5px black;
-}
+  }
 
-
-/* *****************section 3 children *********** */
-
-.input_email{
-    margin: 10px 0;
-    padding: 10px;
-    width: 60%;
-    height: 50px;
-    border:1px solid black;
-    border-radius: 3px;
-
-    font-size: 25px;
-    outline: none;
-}
-
-.contracts{
-    margin-top: 110px;
-    width: 100%;
-    height: 30%;
-    display: flex;
-    justify-content: flex-start;
-
-    
-    
-
-    color: white;
-    background-color: #303443;
-    box-shadow: 0 0 5px 0 #303443;
-}
-
-.contacts_section{
-    margin-left: auto;
-    margin-right: auto;
-    /* margin: 0 15px; */
-    width: 200px;
-    height: 100%;
-    font-size: 22px;
-}
-
-@media only screen and (max-width:501){
-    /* ******* Section 1 children ********* */
-    .greeting{
-        font-size: 60px;
-    }
-    .earth{
-        min-width: 70%;
-        top: 5%;
-        left: 70%;
-    }
-    .rocket{
-        max-width: 40%;
-    }
-    .satellite{
-        width: 20%;
-    }
-
-    /* ******* Section 2 children ********* */
-
-    .section2_container{
-        flex-direction: column;
-    }
-    .left_side{
-        width: 100%;
-        height: 50%;
-    }
-    .right_size{
-        width: 100%;
-        height: 50%;
-    }
-    .image{
-        width: auto;
-        height: 100%;
-    }
-
-     /* ******* Section 3 children ********* */
-
-     .contacts_section{
-         margin: 0 10px;
-         width: fit-content;
-         font-size: 17px;
-     }
-
+  /* ************* Section 3 children *************** */
+  .contact_section {
+    margin: 0 10px;
+    width: fit-content;
+    font-size: 17px;
+  
+  }
 }
